chore: 禁用了标签管理标签内的输入框自动获取焦点

--- a/app/src/main/res/layout/fragment_tag_manage.xml
+++ b/app/src/main/res/layout/fragment_tag_manage.xml
@@ -97,6 +97,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/manage_password_edit"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:focusable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="00000000"
@@ -124,6 +125,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/manage_address_edit"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:focusable="false"
                     android:layout_width="wrap_content"
                     android:digits="1234567890"
                     android:layout_height="wrap_content"
@@ -151,6 +153,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/manage_cnt_edit"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:focusable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -178,6 +181,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/manage_write_edit"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:focusable="false"
                     android:layout_width="wrap_content"
                     android:digits="1234567890ABCDEFabcdef"
                     android:layout_height="wrap_content"
